--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "atob": "1.1.2",
     "autoprefixer": "4.0.0",
     "autosize": "3.0.7",
-    "babel": "5.8.12",
-    "babel-core": "5.8.12",
-    "babel-loader": "5.3.2",
-    "babel-runtime": "5.8.12",
+    "babel-core": "6.3.26",
+    "babel-loader": "6.2.1",
+    "babel-plugin-add-module-exports": "0.1.2",
+    "babel-plugin-transform-runtime": "6.3.13",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babel-preset-stage-1": "6.3.13",
     "body-parser": "^1.13.3",
     "browser-filesaver": "1.1.0",
     "chalk": "1.0.0",
@@ -108,7 +111,7 @@
     "test": "make test"
   },
   "devDependencies": {
-    "babel-eslint": "4.1.6",
+    "babel-eslint": "5.0.0-beta6",
     "better-assert": "1.0.2",
     "blanket": "1.1.6",
     "chai": "2.0.0",
